# QrGenerator

./: .gitignore  ARCHITECTURE.md  AUTH.md  DESIGN_DECISIONS.md  DEVELOPMENT_GUIDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  TUTORIAL.md  debug_env.py  docker-compose.yml  generate_key.py  main.py  pyproject.toml
app/: main.py
app/core/: config.py  logging_config.py  security.py
app/middleware/: logging_middleware.py
app/models/: user.py
app/routers/: qr.py  users.py
app/schemas/: user.py
app/services/: qr_service.py  user_service.py
services/: qr_service.py
tests/: conftest.py  test_api_key.py  test_logging.py  test_qr.py  test_users.py
