[tool.poetry]
name = "qrgenerator"
version = "0.1.0"
description = "Servicio que crea códigos QR"
authors = ["Luis Zapata <luizapata190@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
qrcode = "^7.4.2"
uvicorn = "^0.32.0"
pillow = "^10.4.0"
pydantic-settings = "^2.6.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
